University_system/force-app/main/default/objects/Course_Student__c/Course_Student__c.object-meta.xml
<CustomObject>
    <label>Course_Student</label>
    <nameField>
        <label>Course_Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course_Student</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>