University_system/force-app/main/default/objects/Course_Student__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Course_Student</relationshipLabel>
    <relationshipName>Course_Student</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>